--- a/.github/workflows/ianxc-aoc-ci.yml
+++ b/.github/workflows/ianxc-aoc-ci.yml
@@ -22,6 +22,11 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Install apt dependencies
+        uses: tecolicom/actions-use-apt-tools@v1
+        with:
+          tools: git-crypt
+
       - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
